<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="birthday">dd/mm/yyyy</string>
    <string name="postal_code">Postal code</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="slogan">easy way to flight</string>
    <string name="started">Get Started for Flight</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="select_city">Select city</string>
    <string name="select_province">Select Province</string>
    <string name="select_country">Select Country</string>
    <string name="or">or</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="my_trip">My trip</string>
    <string name="profile">Profile</string>
    <string name="from">From</string>
    <string name="cgk">CGK</string>
    <string name="jakarta">Jakarta</string>
    <string name="to">To</string>
    <string name="flight_number">Flight Number</string>
    <string name="hn09k">HN09K</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="good_morning">Good Morning</string>
    <string name="roisul">ROISUL</string>
    <string name="hope_you_enjoy_and_have_the_best_trip">Hope you enjoy and have the best trip</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
    <string name="airport_name">airport name</string>
    <string name="airport_code">YIA</string>
    <string name="select">Select</string>
    <string name="choose_airport">Choose Airport</string>
    <string name="search_flight">Search Flight</string>
    <string name="one_way">One-Way</string>
    <string name="departure_date">Departure Date</string>
    <string name="status_person_booking">1 Adult in Economy</string>
    <string name="departure_flight">Departure Flight</string>
    <string name="location_name">Location Name</string>
    <string name="day_date">Day, Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="return_date">Return Date</string>
    <string name="name_class">name class</string>
    <string name="countShowTicket">1</string>
    <string name="adult">Adult</string>
    <string name="more_info">more info</string>
    <string name="flight_no">Flight No</string>
    <string name="add_passengger">Add Passengger</string>
    <string name="title">Title</string>
    <string name="Mr">Mr</string>
    <string name="nik">NIK</string>
    <string name="clear_all">clear all</string>
    <string name="recent_search">Recent Search</string>
    <string name="dummy_clock" translatable="false">09:10</string>
    <string name="dummy_month_date" translatable="false">08 Dec</string>
    <string name="thus" translatable="false">Thus</string>
    <string name="flight_not_found">Flight Not Found</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="trip_summary">trip summary</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="passenger_list">Passenger List</string>
    <string name="total_passenger">Total Passenger</string>
    <string name="save">save</string>
    <string name="document_type">Document Type</string>
    <string name="identity_number">Identity Number</string>
    <string name="age">Age</string>
    <string name="ktp">KTP</string>
    <string name="continue_as_a_guest">Continue As A Guest</string>
    <string name="identity_type">Identity Type</string>
    <string name="go_to_login">Go To Login</string>
    <string name="proceed_login">Proceed Login</string>


    <string name="default_time_format" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="date_format" translatable="false">EEEE</string>
    <string name="time_format" translatable="false">HH:mm a</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="booking">Booking</string>
    <string name="list_passenger">List Passenger</string>
    <string name="my_payment">My Payment</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="my_profile">My Profile</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="full_name">Full Name</string>
    <string name="username">username</string>
    <string name="roundtrip">Roundtrip</string>
    <string name="payment">Payment</string>
    <string name="price">Price</string>
    <string name="round_trip">Round-Trip</string>
    <string name="open_my_profile">Open My Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_data">Change Data</string>
    <string name="logout">Logout</string>
    <string name="edit_profile" tools:ignore="MissingTranslation">Edit Profile</string>
    <string name="arrival_date" tools:ignore="MissingTranslation">Arrival Date</string>
    <string name="notification" tools:ignore="MissingTranslation">Notification</string>
    <string name="read" tools:ignore="MissingTranslation">Read</string>
    <string name="unread" tools:ignore="MissingTranslation">Unread</string>
    <string name="payment_id" tools:ignore="MissingTranslation">Payment ID :</string>
    <string name="detail_payment" tools:ignore="MissingTranslation">Detail Payment</string>
    <string name="my_wishlist" tools:ignore="MissingTranslation">My Wishlist</string>
    <string name="flight_detail" tools:ignore="MissingTranslation">Flight Detail</string>
    <string name="flit_pay" tools:ignore="MissingTranslation">Flit Pay</string>
    <string name="top_up" tools:ignore="MissingTranslation">Top Up</string>
    <string name="booking_details">Booking Details</string>


    <!--  dummy country  -->
    <string-array name="country">
        <item>Saudi Arabia</item>
        <item>England</item>
        <item>United State</item>
        <item>Indonesia</item>
    </string-array>

    <!--  dummy province  -->
    <string-array name="province">
        <item>Papua</item>
        <item>Yogyakarta</item>
        <item>Jakarta</item>
        <item>Jawa Timur</item>
        <item>Sumatera Barat</item>
    </string-array>

    <!--  dummy City  -->
    <string-array name="city">
        <item>Sleman</item>
        <item>Jayapura</item>
        <item>Jakarta Selatan</item>
        <item>Surabaya</item>
        <item>Samarinda</item>
    </string-array>

    <string-array name="title">
        <item>Mr</item>
        <item>Mrs</item>
    </string-array>

    <string-array name="documentTypePassenger">
        <item>KTP</item>
        <item>Passport</item>
    </string-array>
    <string-array name="paymentMethod">
        <item>FlitPay Wallet</item>
        <item>Credit Card</item>
    </string-array>
</resources>