<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeIcon"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"/>
    <item
        android:id="@+id/bookIcon"
        android:title="@string/book"
        android:icon="@drawable/ic_outline_book_24"/>
    <item
        android:id="@+id/seatIcon"
        android:title="@string/my_trip"
        android:icon="@drawable/ic_outline_airline_seat_recline_extra_24"/>
    <item
        android:id="@+id/profileIcon"
        android:title="@string/profile"
        android:icon="@drawable/ic_outline_account_circle_24"/>
    <item
        android:id="@+id/moreIcon"
        android:title="More"
        android:icon="@drawable/ic_outline_more_horiz_24"/>

</menu>