<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".view.ui.signup.SignupFragment">

    <ImageView
        android:id="@+id/ivBackSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:id="@+id/ivLogoTicketingSplash"
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_logo_ticketing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ScrollView
        android:id="@+id/svEtSignUp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoTicketingSplash"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etInputFirstNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/firstname"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black_font"
                android:textColorHint="@color/brown_100"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/etInputLastNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et"
                android:hint="@string/lastname"
                android:padding="15dp"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/brown_100"
                android:textColor="@color/black_font"
                android:fontFamily="@font/poppins_medium"
                />
            <EditText
                android:id="@+id/etInputEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/brown_100"
                android:textColor="@color/black_font"
                android:fontFamily="@font/poppins_medium"
                />
            <EditText
                android:id="@+id/etInputNoHpSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_et"
                android:hint="@string/phone_number"
                android:padding="15dp"
                android:textSize="15sp"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/brown_100"
                android:textColor="@color/black_font"
                android:fontFamily="@font/poppins_medium"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black_font"
                />
            <DatePicker
                android:id="@+id/dpBirthdaySignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarTextColor="@color/blue_600" />

            <TextView
                android:id="@+id/tvSelectCountrySignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_country"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black_font"
                />

            <Spinner
                android:id="@+id/spinnerCountrySignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/country"
                />

            <TextView
                android:id="@+id/tvSelectProvinceSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black_font"
                />
            <Spinner
                android:id="@+id/spinnerProvinceSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/province"/>

            <TextView
                android:id="@+id/tvSelectCitySignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black_font"
                />
            <Spinner
                android:id="@+id/spinnerCitySignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:entries="@array/city"
                />

            <EditText
                android:id="@+id/etInputAddressSignUp"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:hint="@string/address"
                android:background="@drawable/bg_address"
                android:padding="15dp"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black_font"
                android:textColorHint="@color/brown_100"/>

            <EditText
                android:id="@+id/etInputPostalCodeSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code"
                android:background="@drawable/bg_et"
                android:padding="15sp"
                android:inputType="number"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black_font"
                android:textColorHint="@color/brown_100"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/etInputPasswordCodeSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/bg_et"
                android:padding="15sp"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black_font"
                android:textColorHint="@color/brown_100"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnApplySignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/svEtSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/btnApplySignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1"
        android:textColor="@color/blue_600"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/llSignUpWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bg_et"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/ic_logo_google"
            android:padding="10dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/login_with_google"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black_font"
            android:textSize="14sp"
            android:gravity="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>