<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.summary.ContactDetailsFragmentDialog"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/edtFirstNameContactDetails"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/edtLastNameContactDetails"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/edtEmailContactDetails"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/edtPhoneNumberContactDetails"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="13"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnSaveContactDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="SAVE"
        android:textColor="@color/light_font"
        android:backgroundTint="@color/primary_blue_1"
        android:textAllCaps="false" />
</LinearLayout>